--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 ibm-watson-machine-learning>=1.0.312
 PyMuPDF
-tensorflow==2.9.2
+tensorflow==2.12.0
 tensorflow-hub==0.12.0
 scikit-learn==1.0.2
 gradio==3.37.0
@@ -9,4 +9,6 @@ notebook
 openai
 transformers
 ipywidgets
-torch --index-url https://download.pytorch.org/whl/cu118
+PyPDF2~=2.0
+#SentencePiece
+#torch --index-url https://download.pytorch.org/whl/cu118
